<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rover View</string>
    <string name="welcome_message">Welcome to\nRover View</string>
    <string name="select_message">Select a rover.</string>
    <string name="img_desc">Blah.</string>
    <string name="month">MM</string>
    <string name="day">DD</string>
    <string name="year">YYYY</string>
    <string name="sol">XXXX</string>
    <string name="sol_select">Sol Select</string>
    <string name="date_select">Date Select</string>
</resources>